--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,3 +6,13 @@ ktor {
         modules = [ taesu.io.ApplicationKt.module ]
     }
 }
+
+database {
+    datasource {
+        driver-class-name = "org.postgresql.Driver"
+        url = "jdbc:postgresql://localhost:5432/demo?reWriteBatchedInserts=true"
+        username = "postgres"
+        password = "password"
+        max-pool-size = 5
+    }
+}
