--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,6 @@ logback_version=1.4.11
 kotlin.code.style=official
 exposed_version=0.41.1
 h2_version=2.1.214
+hikariCpVersion=5.0.1
 postgres_version=42.5.1
 koinVersion=3.4.1
